--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Instagram</title>
   </head>
   <body>
     <div id="root"></div>
